feat(payments): use custom query